--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,8 @@
 # The URL the site will be built for
 base_url = "https://muireall.space"
 
+title = "Ages and orbs"
+
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = true
 
