--- a/config.toml
+++ b/config.toml
@@ -22,6 +22,7 @@ highlight_theme = "inspired-github"
 smart_punctuation = true
 
 [extra]
+signoff = "Muireall"
 # Put all your custom variables here
 
 # See below
